Updates to website

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div id="info">
             <h1>Thomas Huang</h1>
             <h3><i>University of Michigan</i></h3>
+            <strong>Address</strong>: 2260 Hayward St., Ann Arbor, MI <br><br>
             <strong>Email</strong>: thomaseh [at] umich [dot] edu <br><br>
             <ul id="links_list">
                 <li><a href="https://www.linkedin.com/in/thomaseh/" target="_blank"><img height="16" width="16" src="static/icons/linkedin.svg" /></a></li>
@@ -61,10 +62,7 @@
     <div id="about">
         <h2 class="title">About Me</h2>
         <div class="norm">
-            Hello! My name is <strong>Thomas Huang</strong>. I recently graduated from the <a href="https://umich.edu/" target="_blank">University of Michigan</a> and obtained degrees in Computer Science and Data Science at the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a>.
-            <br>
-            <br>
-            Starting this fall, I will be joining Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>'s lab as a PhD student. My research interests are deep learning and its application to computer vision.
+            Hello! My name is <strong>Thomas Huang</strong>. I am a first-year PhD student in the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>. My advisor is Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision.
         </div>
        <hr>
     </div>
@@ -82,18 +80,21 @@
 
     <div id='pub'>
         <h2 class="title" id="pub_title">Publications</h2>
-        <div class="card">
-            <heading>Learning Hierarchical Semantic Image Manipulation through Structured Representations</heading>
-            <div>
-                Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
+            <div class="card">
+                <img src="static/hsim_results.png" alt="HSIM" style="height: 125px; float: left; margin-right: 10px;">
+                <div>
+                    <heading>Learning Hierarchical Semantic Image Manipulation through Structured Representations</heading>
+                    <div>
+                        Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
+                    </div>
+                    <div>
+                        To appear in <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
+                    </div>
+                    <div>
+                        [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>] [<a href="https://github.com/xcyan/neurips18_hierchical_image_manipulation" target="_blank">code</a>]
+                    </div>
+                </div>
             </div>
-            <div>
-                To appear in <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
-            </div>
-            <div>
-                [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>] [<a href="https://github.com/xcyan/neurips18_hierchical_image_manipulation" target="_blank">code</a>]
-            </div>
-        </div>
         <hr>
     </div>
 
@@ -102,22 +103,22 @@
         <div class="card">
             <heading>AI Lab</heading> – University of Michigan <span class="date">April, 2018 – current</span>
             <div>
-                Research Assistant
+                Researcher
             </div>
-            <div class="card_body card_main">
+            <!-- <div class="card_body hide_on_all">
                 <br>
                 I am researching the application of deep learning to generation tasks, including image and music generation. Work done under <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Professor Honglak Lee</a>. Work partially done under the <a href="https://sure.engin.umich.edu/" target="_blank">SURE program</a>.
-            </div>
+            </div> -->
         </div>
         <div class="card">
             <heading>ARM Lab</heading> – University of Michigan <span class="date">Jan – April, 2018</span>
             <div>
                 Research Assistant
             </div>
-            <div class="card_body card_main">
+            <!-- <div class="card_body hide_on_all">
                 <br>
                 I researched the use of deep learning models for 3D shape completion from a single depth view, which has important applications in robotics. Work done under <a href="http://web.eecs.umich.edu/~dmitryb/" target="_blank">Professor Dmitry Berenson</a> at the <a href="http://arm.eecs.umich.edu/" target="_blank">Autonomous Robotic Manipulation</a> (ARM) Lab.
-            </div>
+            </div> -->
         </div>
         <hr>
     </div>
@@ -129,7 +130,7 @@
             <div>
                 Instructional Aide (2 semesters), Head Instructional Aide (1 semester)
             </div>
-            <div class="card_body card_main">
+            <div class="card_body hide_on_all">
                 <br>
                 I taught fundamental machine learning concepts, including linear classifiers, support vector machines, decision trees, bagging and boosting, neural networks, deep learning, clustering, collaborative filtering, and graphical models.
             </div>
@@ -142,9 +143,9 @@
         <div class="card">
             <heading>University of Michigan</heading> – Ann Arbor, Michigan <span class="date">Sep, 2015 – Apr, 2019</span>
             <div>
-                Computer Science, Bachelor of Engineering
+                Computer Science, <span id="b">B</span>achelor of Engineering
             </div>
-            <div class="card_body card_main">
+            <div class="card_body hide_on_all">
                 <br>
                 Cumulative GPA: 3.99, Major GPA: 4.0 <br>
                 Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Natural Language Processing, Data Mining, Algorithmic Robotics, Web Systems, Operating Systems.<br><br>
@@ -160,6 +161,11 @@
             <div>
                 <ul id='award_list'>
                     <li><strong>NSF Graduate Research Fellowship Honorable Mention</strong>, 2018</li>
+                    <li><strong>Richard H. Orenstein Fellowship (in Memory of Murray Orenstein)</strong>, 2019
+                        <ul class="hide_on_all">
+                            <li>Endowed in memory of Murray Orenstein in 1979 by Richard H. Orenstein (BS '62), Sarasota, Florida</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -201,9 +207,9 @@
                 Frontier Scale Software Engineering Intern
             </div>
             <br>
-            <div class="card_body">
+            <!-- <div class="card_body">
                 I worked with a team to pioneer the integration of a third-party software with Salesforce’s Platform using Python and Javascript. I presented the product to C-level executives of a corporate client.
-            </div>
+            </div> -->
         </div>
         <hr>
     </div>
@@ -247,7 +253,7 @@
     <div id='read'>
         <h2 class="title">Readings</h2>
         <div class="norm">
-            I am keeping a list of papers that I read for research/projects, which can be found <a href="https://github.com/thomasehuang/ML-Paper-Notes">here</a>.
+            An outdated list of papers that I read for research/projects, which can be found <a href="https://github.com/thomasehuang/ML-Paper-Notes">here</a>.
         </div>
         <hr>
     </div>
