Fixed bug in website

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     </div>
 
     <div>
-        <button id="pub_but" onclick="dispButton('pub');">Publications</button>
-        <button id="exp_but" onclick="dispButton('exp');">Experience</button>
-        <button id="tae_but" onclick="dispButton('tae');">Teaching & Education</button>
-        <button id="award_but" onclick="dispButton('award');">Awards</button>
-        <button id="proj_but" onclick="dispButton('proj');">Projects</button>
-        <button id="misc_but" onclick="dispButton('misc');">Misc</button>
+        <button id="pub_but">Publications</button>
+        <button id="exp_but">Experience</button>
+        <button id="tae_but">Teaching & Education</button>
+        <button id="award_but">Awards</button>
+        <button id="proj_but">Projects</button>
+        <button id="misc_but">Misc</button>
     </div>
 
     <div id="tab_details">Click on the tabs for more details</div>
