--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div id='res_exp'>
         <h2 class="title">Research Experience</h2>
         <div class="card">
-            <heading>AI Lab</heading> – University of Michigan <span class="date">April, 2018 – current</span>
+            <heading>AI Lab</heading> – University of Michigan <span class="date">Apr. 2018 – current</span>
             <div>
                 Researcher
             </div>
@@ -111,7 +111,13 @@
             </div> -->
         </div>
         <div class="card">
-            <heading>ARM Lab</heading> – University of Michigan <span class="date">Jan – April, 2018</span>
+            <heading>Berkeley DeepDrive (BDD) Lab</heading> – University of California, Berkeley <span class="date">Jun. 2019 – current</span>
+            <div>
+                Research Intern
+            </div>
+        </div>
+        <div class="card">
+            <heading>ARM Lab</heading> – University of Michigan <span class="date">Jan. 2018 – Apr. 2018</span>
             <div>
                 Research Assistant
             </div>
@@ -126,7 +132,7 @@
     <div id='teach'>
         <h2 class="title">Teaching</h2>
         <div class="card">
-            <heading>EECS 445: Intro. to Machine Learning</heading> – University of Michigan <span class="date">Jan, 2018 – Apr, 2019</span>
+            <heading>EECS 445: Intro. to Machine Learning</heading> – University of Michigan <span class="date">Jan. 2018 – Apr. 2019</span>
             <div>
                 Instructional Aide (2 semesters), Head Instructional Aide (1 semester)
             </div>
@@ -141,9 +147,21 @@
     <div id='ed'>
         <h2 class="title">Education</h2>
         <div class="card">
-            <heading>University of Michigan</heading> – Ann Arbor, Michigan <span class="date">Sep, 2015 – Apr, 2019</span>
+            <heading>University of Michigan</heading> – Ann Arbor, Michigan <span class="date">Sep. 2019 – Apr. 2024 (expected)</span>
             <div>
-                Computer Science, <span id="b">B</span>achelor of Engineering
+                Ph.D. in Computer Science and Engineering
+            </div>
+            <!-- <div class="card_body hide_on_all">
+                <br>
+                Cumulative GPA: 3.99, Major GPA: 4.0 <br>
+                Relevant coursework: Machine Learning, Reinforcement Learning, Computer Vision, Artificial Intelligence, Natural Language Processing, Data Mining, Algorithmic Robotics, Web Systems, Operating Systems.<br><br>
+                Honors and Awards: <a href="https://studentawards.engin.umich.edu/deanslist/" target="_blank">Dean's Honor List</a> (Fall '15, Winter & Fall '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">University Honors</a> (Winter '16, Fall '17, Winter '18), <a href="http://honors.umich.edu/awards.php" target="_blank">James B. Angell Scholar</a> ('18)
+            </div> -->
+        </div>
+        <div class="card">
+            <heading>University of Michigan</heading> – Ann Arbor, Michigan <span class="date">Sep. 2015 – Apr. 2019</span>
+            <div>
+                <span id="b">B</span>achelor of Engineering in Computer Science and Data Science
             </div>
             <div class="card_body hide_on_all">
                 <br>
@@ -177,7 +195,7 @@
     <div id='proj'>
         <h2 class="title">Projects</h2>
         <div class="card">
-            <heading>ICLR 2018 Reproducibility Challenge</heading> <span class="date">Sep – Dec, 2017</span>
+            <heading>ICLR 2018 Reproducibility Challenge</heading> <span class="date">Sep. 2017 – Dec. 2017</span>
             <div>
                 Final Project for EECS 498: Reinforcement Learning at the University of Michigan
             </div>
@@ -187,7 +205,7 @@
             </div>
         </div>
         <div class="card">
-            <heading>Front-end Collision Prevention System</heading> <span class="date">Sep – Dec, 2017</span>
+            <heading>Front-end Collision Prevention System</heading> <span class="date">Sep. 2017 – Dec. 2017</span>
             <div>
                 Final Project for EECS 442: Computer Vision at the University of Michigan
             </div>
@@ -202,7 +220,7 @@
     <div id='prof_exp'>
         <h2 class="title">Professional Experience</h2>
         <div class="card">
-            <heading>Salesforce</heading> – San Francisco, California <span class="date">May – August, 2017</span>
+            <heading>Salesforce</heading> – San Francisco, California <span class="date">May. 2017 – Aug. 2017</span>
             <div>
                 Frontier Scale Software Engineering Intern
             </div>
@@ -217,7 +235,7 @@
     <div id='xtra'>
         <h2 class="title">Extracurriculars</h2>
         <div class="card">
-            <heading>UM::Autonomy</heading> – University of Michigan <span class="date">Sep, 2015 – Sep, 2018</span>
+            <heading>UM::Autonomy</heading> – University of Michigan <span class="date">Sep. 2015 – Sep. 2018</span>
             <div>
                 Lead for the AI subteam (2016 – 2018)
             </div>
@@ -227,7 +245,7 @@
             </div>
         </div>
         <div class="card">
-            <heading>Eta Kappa Nu, EECS Honor Society</heading> – University of Michigan <span class="date">Sep, 2016 – Apr, 2019</span>
+            <heading>Eta Kappa Nu, EECS Honor Society</heading> – University of Michigan <span class="date">Sep. 2016 – Apr. 2019</span>
             <div>
                 Member
             </div>
