Added new publication

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Thomas Huang</title>
+    <title>Thomas E. Huang</title>
     <!--
     MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
     MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
@@ -42,7 +42,7 @@
             <i id="pic_desc">@Tokyo, Japan</i>
         </div>
         <div id="info">
-            <h1>Thomas Huang</h1>
+            <h1>Thomas E. Huang</h1>
             <h3><i>University of Michigan</i></h3>
             <strong>Address</strong>: 2260 Hayward St., Ann Arbor, MI <br><br>
             <strong>Email</strong>: thomaseh [at] umich [dot] edu <br><br>
@@ -53,6 +53,7 @@
                 <!-- [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
                 [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
                 [<a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank">Google Scholar</a>] -->
+                |
                 <li><a href="static/resume.pdf" target="_blank">Curriculum Vitae</a></li>
             </ul>
         </div>
@@ -62,7 +63,7 @@
     <div id="about">
         <h2 class="title">About Me</h2>
         <div class="norm">
-            Hello! My name is <strong>Thomas Huang</strong>. I am a first-year PhD student in the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>. My advisor is Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision.
+            Hello! My name is <strong>Thomas E. Huang</strong>. I am a first-year PhD student in the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>. My advisor is Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision.
         </div>
        <hr>
     </div>
@@ -80,6 +81,22 @@
 
     <div id='pub'>
         <h2 class="title" id="pub_title">Publications</h2>
+            <div class="card">
+                <img src="static/TFA_fig1.png" alt="TFA" style="height: 125px; width: 233px; float: left; margin-right: 10px;">
+                <div>
+                    <heading>Frustratingly Simple Few-Shot Object Detection</heading>
+                    <div>
+                        Xin Wang*, <b>Thomas E. Huang</b>*, Trevor Darrell, Joseph E. Gonzalez, Fisher Yu
+                    </div>
+                    <div>
+                        Preprint
+                    </div>
+                    <div>
+                        [<a href="https://arxiv.org/abs/2003.06957" target="_blank">arxiv</a>] [<a href="https://github.com/ucbdrive/few-shot-object-detection" target="_blank">code</a>]
+                    </div>
+                </div>
+            </div>
+            <br>
             <div class="card">
                 <img src="static/hsim_results.png" alt="HSIM" style="height: 125px; float: left; margin-right: 10px;">
                 <div>
@@ -111,7 +128,7 @@
             </div> -->
         </div>
         <div class="card">
-            <heading>Berkeley DeepDrive (BDD) Lab</heading> – University of California, Berkeley <span class="date">Jun. 2019 – current</span>
+            <heading>Berkeley DeepDrive (BDD) Lab</heading> – University of California, Berkeley <span class="date">Jun. 2019 – Sep. 2019</span>
             <div>
                 Research Intern
             </div>
@@ -150,6 +167,10 @@
             <heading>University of Michigan</heading> – Ann Arbor, Michigan <span class="date">Sep. 2019 – Apr. 2024 (expected)</span>
             <div>
                 Ph.D. in Computer Science and Engineering
+            </div>
+            <div class="card_body hide_on_all">
+                <br>
+                Relevant coursework: Advanced Artificial Intelligence, Ecological Approach to Visual Perception.
             </div>
         </div>
         <div class="card">
