--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         Xin Wang*, <b>Thomas E. Huang</b>*, Trevor Darrell, Joseph E. Gonzalez, Fisher Yu
                     </div>
                     <div>
-                        Preprint
+                        <i>International Conference on Machine Learning (ICML)</i>, 2020
                     </div>
                     <div>
                         [<a href="https://arxiv.org/abs/2003.06957" target="_blank">arxiv</a>] [<a href="https://github.com/ucbdrive/few-shot-object-detection" target="_blank">code</a>]
@@ -105,7 +105,7 @@
                         Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
                     </div>
                     <div>
-                        To appear in <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
+                        <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
                     </div>
                     <div>
                         [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>] [<a href="https://github.com/xcyan/neurips18_hierchical_image_manipulation" target="_blank">code</a>]
