--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="about">
         <h2 class="title">About Me</h2>
         <div class="norm">
-            Hello! My name is <strong>Thomas E. Huang</strong>. I am a first-year PhD student in the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>. My advisor is Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision.
+            Hello! My name is <strong>Thomas E. Huang</strong>. I am a second-year PhD student in the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>. My advisor is Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision.
         </div>
        <hr>
     </div>
@@ -80,7 +80,7 @@
     <div id="tab_details">Click on the tabs for more details</div>
 
     <div id='pub'>
-        <h2 class="title" id="pub_title">Publications</h2>
+        <h2 class="title" id="pub_title">Selected Publications</h2>
             <div class="card">
                 <img src="static/TFA_fig1.png" alt="TFA" style="height: 125px; width: 233px; float: left; margin-right: 10px;">
                 <div>
@@ -113,6 +113,57 @@
                 </div>
             </div>
         <hr>
+        <div class="hide_on_all">
+            <h2 class="title" id="pub_title">All Publications</h2>
+                <div class="card">
+                    <img src="static/iclr2021.gif" alt="ICLR2021" style="height: 125px; float: left; width: 233px; margin-right: 10px;">
+                    <div>
+                        <heading>Revisiting Hierarchical Approach for Persistent Long-Term Video Prediction</heading>
+                        <div>
+                            Wonkwang Lee, Whie Jung, Han Zhang, Ting Chen, Jing Yu Koh, <b>Thomas Huang</b>, Hyungsuk Yoon, Honglak Lee, Seunghoon Hong
+                        </div>
+                        <div>
+                            <i>International Conference on Learning Representations (ICLR)</i>, 2021
+                        </div>
+                        <div>
+                            [<a href="https://openreview.net/forum?id=3RLN4EPMdYd" target="_blank">arxiv</a>] [<a href="https://anonymousiclr2021.github.io/hierarchicalvideoprediction" target="_blank">project</a>]
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="card">
+                    <img src="static/TFA_fig1.png" alt="TFA" style="height: 125px; width: 233px; float: left; margin-right: 10px;">
+                    <div>
+                        <heading>Frustratingly Simple Few-Shot Object Detection</heading>
+                        <div>
+                            Xin Wang*, <b>Thomas E. Huang</b>*, Trevor Darrell, Joseph E. Gonzalez, Fisher Yu
+                        </div>
+                        <div>
+                            <i>International Conference on Machine Learning (ICML)</i>, 2020
+                        </div>
+                        <div>
+                            [<a href="https://arxiv.org/abs/2003.06957" target="_blank">arxiv</a>] [<a href="https://github.com/ucbdrive/few-shot-object-detection" target="_blank">code</a>]
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="card">
+                    <img src="static/hsim_results.png" alt="HSIM" style="height: 125px; float: left; margin-right: 10px;">
+                    <div>
+                        <heading>Learning Hierarchical Semantic Image Manipulation through Structured Representations</heading>
+                        <div>
+                            Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
+                        </div>
+                        <div>
+                            <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
+                        </div>
+                        <div>
+                            [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>] [<a href="https://github.com/xcyan/neurips18_hierchical_image_manipulation" target="_blank">code</a>]
+                        </div>
+                    </div>
+                </div>
+                <hr>
+            </div>
     </div>
 
     <div id='res_exp'>
@@ -149,6 +200,13 @@
     <div id='teach'>
         <h2 class="title">Teaching</h2>
         <div class="card">
+            <heading>EECS 545: Machine Learning</heading> – University of Michigan <span class="date">Sep. 2020 – Dec. 2020</span>
+            <div class="card_body hide_on_all">
+                <br>
+                Graduate level machine learning course.
+            </div>
+        </div>
+        <div class="card">
             <heading>EECS 445: Intro. to Machine Learning</heading> – University of Michigan <span class="date">Jan. 2018 – Apr. 2019</span>
             <div>
                 Instructional Aide (2 semesters), Head Instructional Aide (1 semester)
@@ -170,6 +228,7 @@
             </div>
             <div class="card_body hide_on_all">
                 <br>
+                GPA: 4.0 <br>
                 Relevant coursework: Advanced Artificial Intelligence, Ecological Approach to Visual Perception.
             </div>
         </div>
@@ -283,13 +342,13 @@
         <hr>
     </div>
 
-    <div id='read'>
+    <!-- <div id='read'>
         <h2 class="title">Readings</h2>
         <div class="norm">
             An outdated list of papers that I read for research/projects, which can be found <a href="https://github.com/thomasehuang/ML-Paper-Notes">here</a>.
         </div>
         <hr>
-    </div>
+    </div> -->
 
     <!-- <hr> -->
 
